--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,42 +1,37 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.para,
-.small-para {
+  font-family: Arial, Times, serif, Helvetica, sans-serif;
   color: hsl(0, 0%, 0%);
-  font-weight: 800;
-}
-
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
 }
 
 .para {
   font-size: 22px;
+  font-weight: 800;
 }
 
-.confirm {
+.para.small-para {
+  font-size: 14px;
+}
+
+.button {
+  background: white;
+  font-size: 20px;
+  color:black;
+}
+
+.button.confirm {
   background: green;
   color: white;
   font-weight: bold;
 } 
 
-.button {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-size: 20px;
+.text {
+  font-size: 22px;
+  font-weight: 100;
 }
 
-.child {
-  color: rgb(0, 0, 0);
+.text .child {
   font-weight: 800;
   font-size: 14px;
 }
 
-div.text {
-  color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
-}
+
