--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,7 +1,12 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding:8px;
 }
+
 
 .logo {
   font-size: 48px;
@@ -11,9 +16,14 @@
   padding: 4px 32px;
 }
 
+
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:flex;
+  padding: 0;
+  margin: 0;
+  gap:1em;
 }
 
 a {
@@ -23,3 +33,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
