--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,19 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.container{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap:32px;
+}
+.content{
+  display:flex;
+  justify-content: center;
+  gap:52px;
+}
+.content-card{
+  max-width: 200px;
+}
