--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -9,6 +9,13 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display:grid;
+  grid-template: 1fr 1fr 5fr 1fr / 240px 720px;
+  /* grid-template-areas: "header header"
+                        "sidebar nav"
+                        "sidebar article"
+                        "footer footer";*/
+  gap: 15px; 
 }
 
 .container div {
@@ -22,22 +29,37 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column: 1/3;
+  grid-row: 1/2;
+  /* grid-area: header; */
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-column: 1/2;
+  grid-row: 2/4;
+  /* grid-area: sidebar; */
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  /* grid-area: nav */
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-column: 2/ span 1;
+  grid-row: 3 /span 1;
+  /* grid-area: article; */
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/ span 2;
+  grid-row: 4/5;
+  /* grid-area: footer; */ 
 }
 
 .article p {
