--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  gap: 4px;
+  grid-template-columns: 1fr 4fr; 
+  grid-template-rows: 1fr 1fr min-content min-content;
 }
 
 .container div {
@@ -15,7 +19,8 @@
   color: white;
 }
 
-.header {
+.header { 
+  grid-column: 1/ 3;
   background-color: #393f4d;
 }
 
@@ -26,6 +31,7 @@
 
 .sidebar {
   background-color: #C50208;
+  grid-row: 2/4;
 }
 
 .sidebar .photo {
@@ -45,6 +51,7 @@
 }
 
 .nav {
+  border: 1px solid black;
   background-color: #C50208;
 }
 
@@ -54,7 +61,10 @@
 }
 
 .article {
-  background-color: #bccbde;
+  background-color: #bccbde; 
+  display:grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 50px;
 }
 
 .article p {
@@ -68,6 +78,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +94,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/3;
 }
 
 .footer p {
