--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -8,7 +8,7 @@
   display: grid;
   gap: 4px;
   grid-template-columns: 1fr 4fr; 
-  grid-template-rows: 1fr 1fr min-content min-content;
+  grid-template-rows: min-content  min-content 5fr min-content;
 }
 
 .container div {
@@ -21,7 +21,17 @@
 
 .header { 
   grid-column: 1/ 3;
-  background-color: #393f4d;
+  background-color: #393f4d; 
+  display:grid;
+  grid-template-columns: max-content 5fr; 
+  align-items:center;
+}
+
+.menu > ul{
+  display:grid;
+  grid-template-columns: repeat(4, minmax(150px,15%));
+  list-style-type: none;
+  justify-content: center;
 }
 
 .menu ul,
@@ -32,6 +42,8 @@
 .sidebar {
   background-color: #C50208;
   grid-row: 2/4;
+  display:grid;
+  gap:50px;
 }
 
 .sidebar .photo {
@@ -51,8 +63,13 @@
 }
 
 .nav {
-  border: 1px solid black;
   background-color: #C50208;
+}
+
+.nav > ul{
+  display:grid;
+  list-style-type: none;
+  grid-template-columns: repeat(3, 1fr)
 }
 
 .nav ul li {
@@ -64,7 +81,7 @@
   background-color: #bccbde; 
   display:grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 50px;
+  gap: 15px;
 }
 
 .article p {
