--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -8,7 +8,6 @@
   display: grid;
   gap: 4px;
   grid-template-columns: 1fr 4fr; 
-  grid-template-rows: min-content  min-content 5fr min-content;
 }
 
 .container div {
@@ -23,8 +22,9 @@
   grid-column: 1/ 3;
   background-color: #393f4d; 
   display:grid;
-  grid-template-columns: max-content 5fr; 
+  /* grid-template-columns: max-content 5fr; */
   align-items:center;
+  grid-template-columns: 1fr 2fr;
 }
 
 .menu > ul{
@@ -60,6 +60,8 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display:grid;
+  align-items: center;
 }
 
 .nav {
@@ -102,6 +104,7 @@
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
 }
 
 .card .title {
